# chessv2

./: .gitignore  Bitboard.h  CMakeLists.txt  Pieces.hpp  Utils.cpp  main.cpp  temp_main.cpp
Board/: Board.cpp  Board.hpp  GameState.cpp  Zobrist.hpp
Engine/: Engine.hpp
Engine/AlphaBeta/: AlphaBeta.hpp
Engine/Evaluation/: Evaluation.hpp
Engine/PvSearch/: PvSearch.hpp
Engine/PvSplit/: PvSplit.hpp
Engine/QuickSearch/: QuickSearch.hpp
Engine/SplitPoint/: SplitPoint.hpp
Engine/ThreadPool/: ThreadPool.hpp
Engine/TranspositionTable/: TranspositionTable.hpp  Zobrist.hpp
Engine/Utils/: SearchConfig.hpp  SplitPoint.hpp
MoveGenerator/Move/: Move.hpp
MoveGenerator/MoveExecutor/: MoveExecutor.hpp  UndoInfo.hpp
MoveGenerator/PieceAttacks/: KingAttack.hpp  KnightAttack.hpp  PawnAttack.hpp
MoveGenerator/PieceMoveMask/: BishopMoveMask.hpp  QueenMoveMask.hpp  RookMoveMask.hpp
MoveGenerator/PieceRelevantFieldsMask/: BishopRelevantMoveMask.hpp  QueenRelevantMoveMask.hpp  RookRelevantMoveMask.hpp
MoveGenerator/PieceSlidingAttack/: BishopSlidingAttack.hpp  QueenSlidingAttack.hpp  RookSlidingAttack.hpp
MoveGenerator/PreComputedMoves/: MagicBoardIndexGenerator.hpp  PreComputedMoves.hpp
MoveGenerator/PseudoLegalMovesGenerator/: PseudoLegalMovesGenerator.hpp
Parser/: Parser.cpp
Parser/utils/: GameStateContainer.cpp
Tests/: RelevantFieldsTests.cpp  SlidingAttacksTest.cpp  utils.hpp
Tests/Board/: Board.cpp
Tests/Engine/: TestUtils.hpp
Tests/Engine/ThreadPool/: ThreadPool.cpp
Tests/MoveGenerator/: ExecuteMove.cpp  PseudoLegalMoves.cpp  RelevantFieldsTests.cpp  SlidingAttacksTest.cpp
Tests/Parser/: FenParserTest.cpp
